--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ variables:
   azureServiceConnectionId: ''
 
   # Web app name
-  webAppName: 'Udacity-Azure-Devops-Project2'
+  webAppName: 'schaaf-udacity-project2'
 
   # Environment name
   environmentName: 'DEV'
@@ -28,7 +28,7 @@ stages:
   jobs:
   - job: BuildJob
     pool:
-      name: VM Agent Pool
+      name: myAgentPool
     steps:
     - task: UsePythonVersion@0
       inputs:
@@ -64,7 +64,7 @@ stages:
   jobs:
   - deployment: DeploymentJob
     pool:
-      name: VM Agent Pool
+      name: myAgentPool
     environment: $(environmentName)
     strategy:
       runOnce:
@@ -77,7 +77,7 @@ stages:
             displayName: 'Use Python version'
 
           - task: AzureWebApp@1
-            displayName: 'Deploy Azure Web App : Udacity-Azure-Devops-Project2'
+            displayName: 'Deploy Azure Web App : schaaf-udacity-project2'
             inputs:
               azureSubscription: $(azureServiceConnectionId)
               appName: $(webAppName)
