--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,6 +33,8 @@ stages:
     - task: UsePythonVersion@0
       inputs:
         versionSpec: '$(pythonVersion)'
+        addToPath: true
+        githubToken: $(GITHUB_TOKEN)
       displayName: 'Use Python $(pythonVersion)'
 
     - script: |
